samples/_failures_safe/1761724518_339519_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8fd52606.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_8fd52606.c:151:9: error: expected declaration or statement at end of input
  151 |         }
      |         ^
./samples/SAFE/__tmp_8fd52606.c:151:9: error: expected declaration or statement at end of input
